Changes in api and add api's for ui interaction.